--- a/packages/aeicons-react/src/App.css
+++ b/packages/aeicons-react/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 30s linear;
+  animation: infinite 30s linear App-logo-spin;
   height: 40vmin;
 }
 
