feat(icon): color the trophies

--- a/packages/aeicons-react/src/App.css
+++ b/packages/aeicons-react/src/App.css
@@ -31,6 +31,10 @@
   }
 }
 
-.icon-clipboard {
-  font-size: 32px;
+.MyTrophyDarkRed {
+  color: #8B0000;
+}
+
+.MyTrophyDarkGreen {
+  color: #006400;
 }
